src/index.css
body{
  font-family: 'Roboto', sans-serif;
  font-size: 16pt;
  
}

.register-container{
  width: 500px;
  margin: auto;
  position: absolute;
  top: 30%;
  left: 50%;
  transform: translate(-50%);
}
.register-form{
  padding: 16px;
}

.input-name{
  padding: 10px;
  margin: 5px 0 5px 0;
  background: #f1f1f1;
  width: 100%;
  border-radius: 5px;
}

button{
  background-color: #3774d6;
  color: white;
  padding: 14px 20px;
  margin: 8px 0;
  border: none;
  cursor: pointer;
  width: 100%;
  opacity: 0.9;
  border-radius: 5px;
}

button:hover {
  opacity:1;
}

textarea:focus, input:focus{
  outline: none;
}

.chatroom-container{
  width: 98vw;
  height: 80vh;
  display: flex;
  flex-direction: row;
}

.user-list{
  display: inline-block;
  width: 20%;
  height: 100%;
  border: solid 1px grey;
  overflow-y: auto;
  padding: 5px;
  margin:0  5px  5px 0;
  text-align: center;
 
}

.chat{
  display: inline-block;
  width: 84%;
  height: 100%;
  border: solid 1px grey;
  padding: 5px; 
}
.chat-messages{
  height: 80%;
  overflow-y: auto;
}

.input-message{
  width: 100%;
  border-radius: 3px;
  border: solid 1px grey;
  height: 16pt;
  padding: 5px 0;
}

.input-message:focus{
  outline: solid 1px #4c90ff;
}

.time{
  color: grey;
  font-size: 12pt;
}

/* Scrollbar styles */
::-webkit-scrollbar {
  width: 6px;
  height: 6px;
  }
  
  ::-webkit-scrollbar-track {
  box-shadow: inset 0 0 10px rgb(177, 179, 175);
  border-radius: 10px;
  }
  
  ::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background: grey; 
  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
  }

